--- a/1)Notes/11-SQLite3/crud_operations_SQLite.ipynb
+++ b/1)Notes/11-SQLite3/crud_operations_SQLite.ipynb
@@ -269,6 +269,49 @@
     "for row in rows:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# close the connection \n",
+    "\n",
+    "connection.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now this will shows error because connection is closed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ProgrammingError",
+     "evalue": "Cannot operate on a closed database.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mProgrammingError\u001b[0m                          Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[19], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mcursor\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mSelect * from sales\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m rows\u001b[38;5;241m=\u001b[39mcursor\u001b[38;5;241m.\u001b[39mfetchall()\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m rows:\n",
+      "\u001b[1;31mProgrammingError\u001b[0m: Cannot operate on a closed database."
+     ]
+    }
+   ],
+   "source": [
+    "cursor.execute('Select * from sales')\n",
+    "rows=cursor.fetchall()\n",
+    "\n",
+    "for row in rows:\n",
+    "    print(row)"
+   ]
   }
  ],
  "metadata": {
