--- a/1)Notes/12-Logging in python/Logging multiple loggers.ipynb
+++ b/1)Notes/12-Logging in python/Logging multiple loggers.ipynb
@@ -9,11 +9,66 @@
     "   You can create multiple loggers for different parts of your applications\n",
     "   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import logging\n",
+    "\n",
+    "# create logger for module 1\n",
+    "logger1=logging.getLogger(\"module1\")\n",
+    "logger1.setLevel(logging.DEBUG)\n",
+    "\n",
+    "# Create a logger for module2\n",
+    "logger2=logging.getLogger(\"module2\")\n",
+    "logger2.setLevel(logging.WARNING)\n",
+    "\n",
+    "\n",
+    "# Configure logging settings\n",
+    "logging.basicConfig(\n",
+    "    level=logging.DEBUG,\n",
+    "    format='%(asctime)s - %(name)s - %(levelname)s - %(message)s',\n",
+    "    datefmt='%Y-%m-%d %H:%M:%S'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
